--- a/WebContent/css/admin-form.css
+++ b/WebContent/css/admin-form.css
@@ -9,8 +9,8 @@ body{
 }
 .sec_header .header .header_h1{
     flex-basis: 50px;
-    height:70%;
-    background: url("../틈로고.png") 0 0 no-repeat;
+    height: 70%;
+    background: url("/images/logo.png") 0 0 no-repeat;
     text-indent: -9999px;
     background-size: 50px auto;
 }
