--- a/WebContent/css/accommodationList/hotelList.css
+++ b/WebContent/css/accommodationList/hotelList.css
@@ -1,118 +1,3 @@
-header h1{
-    margin: 0;
-    height: 100%;
-}
-
-header li{
-    color: white;
-    list-style: none;
-}
-
-.sec-header-page{
-    background: white;
-    position: sticky;
-    top: 0;
-    z-index: 10;
-}
-.header-sec{
-    display: flex;
-    background: white;
-    height: 72px;
-    width: 1200px;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-}
-    .header-sec a {
-        --height: 50%;
-        display: block;
-        text-align: center;
-        padding: .5rem 1rem;
-        text-decoration: none;
-        color: #5f0081;
-        font-weight: bold;
-    }
-
-    .header-sec>.header-logo{
-        flex-basis: 50px;
-        height:70%;
-        background: url(/images/틈로고index.png) 0 0 no-repeat;
-        text-indent: -9999px;
-        background-size: 50px auto;
-    }
-        .header-sec>.header-logo .teum-logo{
-            box-sizing: border-box;
-            height: 100%;
-        } 
-
-.main-menu{
-    display: flex;
-    margin: 0;
-    position: relative;
-}
-
-.sec-header-page .mega-menu{
-    position: absolute;
-    border: 1px solid rgb(160, 160, 160);
-    border-top: none;
-    background-color: white;
-    --margin-top: 15px;
-    right: -12px;
-    opacity: 0;
-    transition: opacity .25s ease .1s;
-}
-.sec-header-page .mega-menu ul li{
-	height: 0;
-	overflow: hidden;
-	padding: 0;
-	transition: height .25s ease .1s;
-}
-
-    .sec-header-page .mypage:hover .mega-menu{
-        opacity: 1;
-
-    }
-
-    .sec-header-page .mypage:hover .mega-menu ul li {
-        height: 36px;
-        overflow: visible;
-        padding: 0;
-    }
-
-        .sec-header-page .mega-menu a{
-            color: #5f0081;
-        }
-
-/*---------- 헤더 검색 -----------*/
-.header_search{
-    display: flex;
-}
-    .header_search>input{
-        padding: 8px 16px 8px 16px;
-        width: 100px;
-    }
-    
-li  a .title{
-background: rgba(50,50,50, 0.5);
-color: rgba(255, 255, 255, 0.9);
-}
-li  a .badge{
-    background: #5f0081;
-    color: white;
-}
-li  a .name{
-    font-weight: bold;
-    color: white;
-}
-li  a .score{
-    color: orange;
-}
-li  a .location{
-
-}
-li  a .price{
-
-}
 /* --------------------------- */
 .container{
     width: max-content;
@@ -121,22 +6,63 @@ li  a .price{
     display: flex;
     
 }
+    /* ---------사이드---------- */
     .container .aside{
         width: 200px;
+        margin-top: 40px;
 
     }
+
+
+    /* ---------메인---------- */
     .container .main{
-        width: 500px;
+        width: 638px;
     }
         .main .location ul{
             display: flex;
+            justify-content: flex-end;
         }
-        .main .product-list{
-            display: flex;
+        /* .container .main .product-list{ */
+            
         }
-        .container .main .product-list{
-            position: relative;
-        }
-            .container .main .product-list .pic{
-                p
+            .container .main .product-list .product{
+                position: relative;
             }
+                .container .main .product-list .product .pic{
+                    position: absolute;
+                }
+                .container .main .product-list .product .evt-info{
+                    position: relative;
+                    height: 300px;
+                }
+                    .container .main .product-list .product .evt-info .name{
+                        background: black;
+                        opacity: 0.7;
+                        color: white;
+                        font-weight: bold;
+                        font-size: 30px;
+                        text-align: center;
+                        
+                    }
+                    .container .main .product-list .product .evt-info .score{
+                        color: orange;
+                        opacity: 0.9;
+                        font-size: 23px;
+                        position: absolute;
+                        bottom: 52px;
+                    }
+                    .container .main .product-list .product .evt-info .location{
+                        color: white;
+                        font-size: 23px;
+                        opacity: 0.9;
+                        position: absolute;
+                        bottom: 25px;
+                    }
+                    .container .main .product-list .product .evt-info .price{
+                        color: white;
+                        opacity: 0.9;
+                        font-size: 20px;
+                        position: absolute;
+                        right: 0px;
+                        bottom: 0px;
+                    }
