--- a/WebContent/css/company/accommodation/regAccommodation.css
+++ b/WebContent/css/company/accommodation/regAccommodation.css
@@ -1,122 +1,57 @@
-header h1{
-    margin: 0;
-    height: 100%;
-}
 
-header li{
-    color: white;
-    list-style: none;
-}
-
-.sec-header-page{
-    background: white;
-    position: sticky;
-    top: 0;
-    z-index: 10;
-}
-.header-sec{
-    display: flex;
-    background: white;
-    height: 72px;
-    width: 1200px;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-}
-    .header-sec a {
-        --height: 50%;
-        display: block;
-        text-align: center;
-        padding: .5rem 1rem;
-        text-decoration: none;
-        color: #5f0081;
-        font-weight: bold;
-    }
-
-    .header-sec>.header-logo{
-        flex-basis: 50px;
-        height:70%;
-        background: url(/images/틈로고index.png) 0 0 no-repeat;
-        text-indent: -9999px;
-        background-size: 50px auto;
-    }
-        .header-sec>.header-logo .teum-logo{
-            box-sizing: border-box;
-            height: 100%;
-        } 
-        .main-menu{
-            display: flex;
-            margin: 0;
-            position: relative;
-        }
-        
-        .sec-header-page .mega-menu{
-            position: absolute;
-            border: 1px solid rgb(160, 160, 160);
-            border-top: none;
-            background-color: white;
-            --margin-top: 15px;
-            right: -12px;
-            opacity: 0;
-            transition: opacity .25s ease .1s;
-        }
-        .sec-header-page .mega-menu ul li{
-            height: 0;
-            overflow: hidden;
-            padding: 0;
-            transition: height .25s ease .1s;
-        }
-        
-            .sec-header-page .mypage:hover .mega-menu{
-                opacity: 1;
-        
-            }
-        
-            .sec-header-page .mypage:hover .mega-menu ul li {
-                height: 36px;
-                overflow: visible;
-                padding: 0;
-            }
-        
-                .sec-header-page .mega-menu a{
-                    color: #5f0081;
-                }
-                .header_search{
-    display: flex;
-}
-    .header_search>input{
-        padding: 8px 16px 8px 16px;
-        width: 100px;
-    }.header_search{
-        display: flex;
-    }
-        .header_search>input{
-            padding: 8px 16px 8px 16px;
-            width: 100px;
-        }
 main{
+    padding-top: 10px;
     width: max-content;
     margin-left: auto;
     margin-right: auto;
 }  
-    main>content-box{
-
+    main .content-box{
+        margin-left: auto;
+        margin-right: auto;
     }
-    main h1{
+    .content-box h1{
         font-weight: bold;
-        font-size: 20px;
+        font-size: 40px;
         color: #5F0080;
+        text-align: center;
+        padding-bottom: 10px;
     }
-    main .add-room{
-        display: inline-block;
-        border: 2px solid black;
-        position: relative;
-    }
-    main .addButton{
-        position: absolute;
-        right:0px;
-        bottom: 0px;
-    }
-    main .regButton{
+        .content-box div{
+            padding-bottom: 5px;
+        }
+        .content-box .text-box{
+            height: 30px;
+            width: 250px;
 
+        }
+        .content-box select{
+            width: 130px;
+            padding-left: 40px;
+        }
+        .content-box select{
+            height: 30px;
+        }
+
+    .add-room{
+        display: inline-block;
+        border: 0.5px solid #fc0453;
+        margin: 5px;
+        padding : 10px;
     }
+    .submit-btn{
+        background-color: #5f0081;
+        border-radius: 20px;
+        border: none;
+        cursor: pointer;
+        color: #ffffff;
+        padding: 10px 20px;
+        text-decoration: none;
+        font-size: 14px;
+        height: 50px;
+        width: 90px;
+    }
+    .submit-btn:hover{
+        background-color: #5f0081;
+        opacity: 0.8;
+    }
+
