--- a/WebContent/css/reg.css
+++ b/WebContent/css/reg.css
@@ -30,6 +30,65 @@
                 transform: translateX(-50%);
             }
 
+                .main>.reg-form-sec .reg-form-container> .reg-form-item>.input-box{
+                    height: 30px;
+                    overflow: hidden;
+                }
+                    .main>.reg-form-sec .reg-form-container> .reg-form-item>.input-box>div{
+                        display: flex;
+                        flex-direction: column;
+                    }
+                .main>.reg-form-sec .reg-form-container> .reg-form-item>.discorrect{
+                    height: 52px;
+                }
+                    .email,.password,.password-check,.phone,.name{
+                        width: 300px;
+                        height: 30px;
+                        border: 1px solid gray;
+                        padding-left: 10px;
+                    }
+                    .pass{
+                        border-color: #5f0081;
+                    }
+
+
+                    .member-type{
+                        display: flex;
+                        padding-left: 50px;
+                    }
+                        .member-type>div{
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        }
+                    .checkbox-container {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        --border: 1px solid rgb(0, 132, 255);
+                    }
+                    
+                    .checkbox-container > input[type="radio"] {
+                        display: none;
+                    }
+
+                    .checkbox-container > input[type="radio"] + label span {
+                        display: inline-block;
+                        width: 30px;
+                        height: 30px;
+                        --margin: -2px 10px 0 0;
+                        vertical-align: middle;
+                        background: url(/images/checkbox-bold.svg) left top no-repeat;
+                        cursor: pointer;
+                        background-size: cover;
+                    }
+
+                    .checkbox-container > input[type="radio"]:checked + label span {
+                        background: url(/images/checkbox-bold.svg) -30px top no-repeat;
+                        background-size: cover;
+                    }
+
             /* .breadcrumb > .breadcrumb-list {
                 display: flex;
                 justify-content: flex-end;
@@ -54,4 +113,27 @@
                     color: red;
                     font-size: 12px;
                 }
-            
+
+
+                .button-submit{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                }
+                    .button-submit>input{
+                        width: 100%;
+                        height: 30px;
+                        line-height: 30px;
+                        color: white;
+                        font-size: 16px;
+                        background-color: #5f0081;
+                        border: 1px solid #5f0081;
+                        border-radius: 15px;
+                    }
+                    .button-submit>input.disabled{
+                        opacity: 0.5;
+                    }
+
+                
