--- a/WebContent/css/company/userInfo/memberInfo.css
+++ b/WebContent/css/company/userInfo/memberInfo.css
@@ -68,36 +68,28 @@
                 justify-content: flex-end;
                 font-size: 12px;
             }
-            .reservation-list-sec>ul{
-                width: 650px;
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-between;
-            }
-            .reservation-list-sec>h1{
+
+            .member-info-sec>h1{
                 width: 500px;
                 font-weight: bold;
                 font-size: 28px;
                 margin: 50px 0 30px 0;
             }
-            .reservation-list-sec>ul>li{
-                border: 1px solid gray;
-                width: 300px;
+            .member-info-sec>div:nth-child(2){
+                margin-top: 100px;
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                padding: 10px 0;
-                margin: 10px 0;
+                align-items: flex-end;
             }
-                .reservation-list-sec>ul>li>img{
-                    width: 280px;
-                    height: 200px;
+                .member-info-sec>div:nth-child(2)>p:first-child{
+                    font-size: 20px;
                 }
-                .reservation-list-sec>ul>li>p{
-                    margin-top: 10px;
-                    color: lightslategrey;
+                .member-info-sec>div:nth-child(2)>p:last-child{
+                    font-size: 12px;
+                    color: gray;
                 }
+            .member-info-sec>div:nth-child(3){
+                margin-top: 10px;
+            }
             
 
 
