--- a/WebContent/css/company/reverseOffer/detail.css
+++ b/WebContent/css/company/reverseOffer/detail.css
@@ -69,7 +69,7 @@
                 }
 
             .proposal-sec {
-                --border: 1px solid red;
+                border: 1px solid red;
                 position: relative;
             }
 
@@ -147,7 +147,7 @@
                                 }
 
             .offer-sec {
-                --border: 1px solid red;
+                border: 1px solid red;
                 margin: 70px auto 0 auto;
             }
 
@@ -160,7 +160,7 @@
                 }
 
                 .offer-form {
-                    --border: 1px solid blue;
+                    border: 1px solid blue;
                     margin: 20px 0px 0 30px;
                 }
 
@@ -180,8 +180,9 @@
                         .offer-form > section > .offer-container {
                             flex-grow: 10;
                             display: flex;
-                            --border: 1px solid red;
+                            border: 1px solid red;
                             padding-left: 10px;
+                            width: 500px
                         }
 
                             .offer-img-container {
