--- a/WebContent/css/event/detail.css
+++ b/WebContent/css/event/detail.css
@@ -75,10 +75,18 @@
                 margin: 50px 0 30px 0;
             }
 
+            .event-sec > h2 {
+                font-size: 16px;
+                font-weight: bold;
+            }
+
+                .event-sec > h1 > span {
+                    font-size: 24px;
+                }
 
         .main .img-sec .img-container {
             width: 800px;
-            margin: 0 auto;
+            margin: 50px auto 0 auto;
         }
         
             .main .img-sec .img-container > img {
