--- a/WebContent/css/event/list.css
+++ b/WebContent/css/event/list.css
@@ -75,6 +75,10 @@
                 margin: 50px 0 30px 0;
             }
 
+                .event-sec > h1 > span {
+                    font-size: 24px;
+                }
+
             .event-sec > .event-list {
                 display: flex;
                 color: #888888;
