--- a/WebContent/css/accommodationList/hotelList.css
+++ b/WebContent/css/accommodationList/hotelList.css
@@ -9,60 +9,196 @@
     /* ---------사이드---------- */
     .container .aside{
         width: 200px;
+        height: 460px;
         margin-top: 40px;
-
+        margin-right: 15px;
+        border: 1px solid #fc0453;
+        padding-left: 5px;
+        position: sticky;
+        top: 72px;
     }
 
 
     /* ---------메인---------- */
     .container .main{
         width: 638px;
+        margin-top: 15px;
     }
         .main .location ul{
             display: flex;
             justify-content: flex-end;
         }
-        /* .container .main .product-list{ */
+        .picked-item-sec > h1{
+            width: 500px;
+            font-weight: bold;
+            font-size: 24px;
+            margin: 50px 0 20px 30px;
+        }
+
+        .picked-item-sec>div{
+            width: 600px;
+            margin: 0 auto;
+            position: relative;
             
         }
-            .container .main .product-list .product{
-                position: relative;
+        
+            .picked-item-sec>div img{
+                margin: 0 auto;
+                width: 600px;
+                height: 300px;
             }
-                .container .main .product-list .product .pic{
-                    position: absolute;
+            .picked-item-sec .description-item{
+                position: absolute;
+                top: 160px;
+                left: 30px;
+            }
+                .picked-item-sec .description-item>p:first-child{
+                    color: white;
+                    font-weight: 900;
+                    font-size: 25px;
+                    
                 }
-                .container .main .product-list .product .evt-info{
-                    position: relative;
-                    height: 300px;
+                .picked-item-sec .description-item>p:nth-child(2){
+                    color: orange;
+                    font-size: 20px;
+                    font-weight: bold;
+                    margin-top: 10px;
                 }
-                    .container .main .product-list .product .evt-info .name{
-                        background: black;
-                        opacity: 0.7;
+                .picked-item-sec .description-item>p:nth-child(3){
+                    color: white;
+                    font-weight: bold;
+                    font-size: 22px;
+                    margin-top: 10px;
+                }
+            .picked-item-sec .item-price{
+                position: absolute;
+                top: 250px;
+                left: 380px;
+            }
+                .picked-item-sec .item-price>div{
+                    display: flex;
+                    align-items: center;
+                }
+                    .picked-item-sec .item-price>div>p:first-child{
                         color: white;
+                        font-size: 22px;
+                    }
+                    .picked-item-sec .item-price>div>p:nth-child(2){
+                        color: white;
+                        font-size: 16px;
+                        background-color: #da6b8e;
+                        margin-left: 5px;
+                    }
+                    .picked-item-sec .item-price>div>p:last-child{
+                        color: white;
+                        font-size: 22px;
                         font-weight: bold;
-                        font-size: 30px;
-                        text-align: center;
-                        
+                        margin-left: 5px;
                     }
-                    .container .main .product-list .product .evt-info .score{
-                        color: orange;
-                        opacity: 0.9;
-                        font-size: 23px;
-                        position: absolute;
-                        bottom: 52px;
-                    }
-                    .container .main .product-list .product .evt-info .location{
-                        color: white;
-                        font-size: 23px;
-                        opacity: 0.9;
-                        position: absolute;
-                        bottom: 25px;
-                    }
-                    .container .main .product-list .product .evt-info .price{
-                        color: white;
-                        opacity: 0.9;
-                        font-size: 20px;
-                        position: absolute;
-                        right: 0px;
-                        bottom: 0px;
-                    }
+            .picked-item-sec>div>div:last-child{
+                width: 600px;
+                background-color: black;
+                height: 300px;
+                position: absolute;
+                top: 0;
+                opacity: 0;
+            }
+            .snip1368 {
+                position: relative;
+                overflow: hidden;
+                margin: 10px;
+                --min-width: 230px;
+                --max-width: 315px;
+                width: 100%;
+                color: #ffffff;
+                line-height: 1.4em;
+            }
+              .snip1368 * {
+                -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+                -webkit-transition: all 0.4s ease;
+                transition: all 0.4s ease;
+            }
+            .snip1368 img {
+                opacity: 1;
+                width: 100%;
+                vertical-align: top;
+            }
+            .snip1368 h3 {
+                position: absolute;
+                top: 0%;
+                width: 100%;
+                background-color: #212121;
+                z-index: 1;
+                text-align: right;
+                padding: 15px 25px 0px;
+                margin: 0;
+                font-weight: 300;
+                font-size: 1.3em;
+                transform: translateY(-200%);
+            }
+            .snip1368 h3:before {
+                position: absolute;
+                content: '';
+                top: 100%;
+                left: 0;
+                width: 0;
+                height: 0;
+                border-style: solid;
+                border-width: 0 315px 37px 285px;
+                border-color: transparent #212121 transparent transparent;
+            }
+            .snip1368 figcaption {
+                padding: 5px 25px 15px;
+                position: absolute;
+                width: 100%;
+                z-index: 2;
+                bottom: 0%;
+                background-color: #141414;
+                -webkit-transform: translateY(200%);
+                transform: translateY(200%);
+            }
+            .snip1368 figcaption:before {
+                position: absolute;
+                content: '';
+                bottom: 100%;
+                left: 0;
+                width: 0;
+                height: 0;
+                border-style: solid;
+                border-width: 22px 0 0 315px;
+                border-color: transparent transparent transparent #141414;
+            }
+            .snip1368 .icons {
+                margin-top: -20px;
+            }
+            .snip1368 i {
+                padding: 0px 8px;
+                display: inline-block;
+                font-size: 24px;
+                color: #ffffff;
+                text-align: center;
+                opacity: 0.7;
+            }
+            .snip1368 i:hover {
+                opacity: 1;
+                -webkit-transition: all 0.35s ease;
+                transition: all 0.35s ease;
+            }
+            .snip1368:hover{
+                cursor: pointer;
+            }
+                .snip1368:hover h3,
+                .snip1368.hover h3 {
+                -webkit-transform: translateY(0%);
+                transform: translateY(0%);
+                }
+                .snip1368:hover figcaption,
+                .snip1368.hover figcaption {
+                -webkit-transform: translateY(0%);
+                transform: translateY(0%);
+                }
+            
+                .snip1368:hover .hovered-item-bg{
+                    opacity: 0.3;
+                }
