--- a/WebContent/css/admin/accommodations/list.css
+++ b/WebContent/css/admin/accommodations/list.css
@@ -55,3 +55,40 @@
             position: relative;
             
         }
+        table td.no-border {
+            border-bottom: none;
+        }
+		.pager-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+		}
+		
+            .pager-container .pager-list {
+                display: flex;
+            }
+		
+                .pager-container .pager-list li {
+                    margin-left: 15px;
+                }
+		
+                .pager-container .pager-list li:last-child {
+                    margin-right: 15px;
+                }
+                
+                .pager-container .pager-list .active-page {
+                    color: #fc0453;
+                    font-weight: bold;
+                }
+        
+                .pager-container .pager-list li a {
+                    text-decoration: none;
+                }
+        
+                .pager-container .pager-list li a:hover {
+                    color: #fc0453;
+                }
+        
+            .pager-container .btn a {
+                text-decoration: none;
+            }
