--- a/WebContent/css/admin/accommodations/regList.css
+++ b/WebContent/css/admin/accommodations/regList.css
@@ -140,3 +140,37 @@ header li{
                 border-bottom: 1px solid #ffffff;
             }
 
+            .pager-container {
+                display: flex;
+                justify-content: center;
+                margin-top: 20px;
+            }
+            
+                .pager-container .pager-list {
+                    display: flex;
+                }
+            
+                    .pager-container .pager-list li {
+                        margin-left: 15px;
+                    }
+            
+                    .pager-container .pager-list li:last-child {
+                        margin-right: 15px;
+                    }
+                    
+                    .pager-container .pager-list .active-page {
+                        color: #fc0453;
+                        font-weight: bold;
+                    }
+            
+                    .pager-container .pager-list li a {
+                        text-decoration: none;
+                    }
+            
+                    .pager-container .pager-list li a:hover {
+                        color: #fc0453;
+                    }
+            
+                .pager-container .btn a {
+                    text-decoration: none;
+                }
