--- a/WebContent/css/reg.css
+++ b/WebContent/css/reg.css
@@ -41,7 +41,7 @@
                 .main>.reg-form-sec .reg-form-container> .reg-form-item>.discorrect{
                     height: 52px;
                 }
-                    .email,.password,.password-check,.phone,.name{
+                    .email,.password,.password-check,.phone,.name,.birthday{
                         width: 300px;
                         height: 30px;
                         border: 1px solid gray;
