event dao 수정 및 리뷰 js 추가

--- a/WebContent/css/user/review/reg.css
+++ b/WebContent/css/user/review/reg.css
@@ -134,6 +134,7 @@
                             padding-left: 5px;
                             border: 1px solid rgb(216, 216, 216);
                             background: rgba(243, 243, 243, 0.514);
+                            resize: none;
                         }
 
                     .review-sec .review-form .submit-btn-container {
