--- a/WebContent/css/admin/promotion/event/reg.css
+++ b/WebContent/css/admin/promotion/event/reg.css
@@ -54,8 +54,9 @@
 	            }
 	
 	            .sub-container .reg-form > table td > .input-title {
-	                width: 350px;
-	                height: 25px;
+	                width: 413px;
+					height: 25px;
+					padding-left: 5px;
 	            }
 	
 	                .sub-container .reg-form > table td > .checkbox-open {
@@ -65,7 +66,12 @@
 	
 	                .sub-container .reg-form > table td > .checkbox-open + span {
 	                    margin-left: 10px;
-	                }
+					}
+					
+					.sub-container .reg-form > table td > .input-date {
+						width: 200px;
+						padding-left: 55px;
+					}
 	
 					.sub-container .reg-form > table td > .input-file {
 						cursor: pointer;
@@ -76,7 +82,7 @@
 	                }
 	
 	            .sub-container .reg-form > div {
-	                width: 800pxpx;
+	                width: 800px;
 	                margin: 10px 0 0 30px;
 	                text-align: center;
 	            }
