qna db연결 goldenTime 관리자 페이지 수정

--- a/WebContent/css/admin/promotion/goldenTime/list.css
+++ b/WebContent/css/admin/promotion/goldenTime/list.css
@@ -1,10 +1,36 @@
+.d-none{
+	display: none;
+}
 
+
+    /************************main-search********************/
+		
+		.main .list-board .main-search{
+			width: 900px; /*table size*/
+			display:flex;
+			justify-content: space-between;
+			 padding-top: 30px;
+			
+		}
+		
+	 /************************main table********************/
+	.main .sub-container {
+	margin-left: 30px;
+	}	
+	
+		.main h1 {
+		    font-size: 20px;
+
+		}
     /********************************************/
 
+ 		.main .list-board>.AccTypeCatagory{
+               margin: 10px 0 10px 0 ;
+           }
         .main .list-board>table{
             border-top: 2px solid #5f005f;
             table-layout: fixed;
-            width: 800px;
+            width:  900px;
             font-size: 14px;
             margin: 10px 0 0 0px;
         }
