--- a/WebContent/css/admin/accommodations/list.css
+++ b/WebContent/css/admin/accommodations/list.css
@@ -1,3 +1,4 @@
+/********************************************/
 header h1{
     margin: 0;
     height: 100%;
@@ -36,7 +37,7 @@ header li{
     .header-sec>.header-logo{
         flex-basis: 50px;
         height:70%;
-        background: url(/images/틈로고index.png) 0 0 no-repeat;
+        background: url(/images/logo.png) 0 0 no-repeat;
         text-indent: -9999px;
         background-size: 50px auto;
     }
@@ -44,62 +45,127 @@ header li{
             box-sizing: border-box;
             height: 100%;
         } 
-        .main-menu{
-            display: flex;
-            margin: 0;
-            position: relative;
+
+.main-menu{
+    display: flex;
+    margin: 0;
+    position: relative;
+}
+
+.sec-header-page .mega-menu{
+    position: absolute;
+    border: 1px solid rgb(223, 223, 223);
+    border-top: none;
+    background-color: white;
+    --margin-top: 15px;
+    --right: -12px;
+    opacity: 0;
+    transition: opacity .25s ease .1s;
+    width: 90px;
+}
+    .sec-header-page .mega-menu ul li{
+    height: 0;
+    overflow: hidden;
+    padding: 0;
+    transition: height .25s ease .1s;
+    }
+
+        .sec-header-page .mega-menu ul li a{
+            text-align: left;
+            font-size: 14px;
+            font-weight: none;
         }
-        
-        .sec-header-page .mega-menu{
-            position: absolute;
-            border: 1px solid rgb(160, 160, 160);
-            border-top: none;
-            background-color: white;
-            --margin-top: 15px;
-            right: -12px;
-            opacity: 0;
-            transition: opacity .25s ease .1s;
-        }
-        .sec-header-page .mega-menu ul li{
-            height: 0;
-            overflow: hidden;
+
+    .sec-header-page .sub-page .character {
+        background: url(/images/smile.png) 0 8px no-repeat;
+        background-size: 25px;
+        margin-left: 20px;
+        padding-left: 30px;
+    }
+
+    .sec-header-page .sub-page:hover .mega-menu{
+        opacity: 1;
+    }
+
+        .sec-header-page .sub-page:hover .mega-menu ul li {
+            height: 36px;
+            overflow: visible;
             padding: 0;
-            transition: height .25s ease .1s;
         }
-        
-            .sec-header-page .mypage:hover .mega-menu{
-                opacity: 1;
-        
+
+            .sec-header-page .sub-page:hover .mega-menu ul a:hover {
+                background: #5f0081;
+                color: white;
             }
-        
-            .sec-header-page .mypage:hover .mega-menu ul li {
-                height: 36px;
-                overflow: visible;
-                padding: 0;
-            }
-        
-                .sec-header-page .mega-menu a{
-                    color: #5f0081;
-                }
-                .header_search{
+
+/*----------  header search -----------*/
+.header-search{
     display: flex;
 }
-    .header_search>input{
-        padding: 8px 16px 8px 16px;
-        width: 100px;
-    }.header_search{
-        display: flex;
+    .header-search>input{
+        --padding: 8px 16px 8px 16px;
+        width: 200px;
+        padding-left: 20px;
+        font-size: 15px;
     }
-        .header_search>input{
-            padding: 8px 16px 8px 16px;
-            width: 100px;
-        }.main .sub-container h1 {
-    font-size: 20px;
-    margin: 30px 0 0 30px;
+
+/*-------------footer------------*/
+.sec_footer{
+    background-color: white;  
 }
-.main .sub-container .AccTypeCatagory{
-    margin: 30px 0 0 30px;
+footer{
+    height: 300px;
+    width: 1200px;
+    background-color: white;  
+    color :rgba(0,0,0,0.38);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    font-size: 14px;
 }
+
+footer ul{
+    padding: 0;
+    list-style: none;
+    display: flex;
+    --flex-wrap: wrap;
+}
+
+footer ul li{
+    display: flex;
+    flex-shrink: 0;
+}
+
+/* footer ul li a{
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+} */
+
+footer a{
+    color: lightslategray;
+}
+
+footer div p{
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+/* -------------------------------------- */
+.main .sub-container h1 {
+font-size: 20px;
+margin: 30px 0 0 30px;
+}
+.main .sub-container .main-search{
+    width: 900px; 
+    display:flex;
+    justify-content: space-between;
+    padding-top: 30px;
+}
+.main .sub-container .main-search .acc-catagory{
+    margin-top: 35px;
+}
+
 
 .main .list-board > table {
     border-top: 2px solid #5F0080;
