--- a/WebContent/css/company/accommodation/regAccommodation.css
+++ b/WebContent/css/company/accommodation/regAccommodation.css
@@ -10,7 +10,8 @@ margin: 10px auto 0px auto; */
 
         .content-box div{
             padding-bottom: 5px;
-            margin-left: 50px;
+            /* margin-left: 50px; */
+            padding-left: 50px;
             color: #5f0081;
         }
         .content-box .text-box{
@@ -35,7 +36,6 @@ margin: 10px auto 0px auto; */
             cursor: pointer;
             color: #ff0080;
             font-weight: bold;
-            
         }
         .button:hover{
             background-color: #ff0080;
@@ -45,8 +45,9 @@ margin: 10px auto 0px auto; */
     .add-room{
         display: inline-block;
         border: 0.5px solid #fc0453;
-        margin: 10px;
-        padding : 10px;
+        margin-top: 20px;
+        padding: 10px 30px 10px 0px;
+        margin-bottom: 10px;
     }
         .add-room div{
             padding-left: -40px;
@@ -61,7 +62,7 @@ margin: 10px auto 0px auto; */
         text-decoration: none;
         font-size: 14px;
         height: 50px;
-        width: 90px;
+        width: 200px;
         
     }
     .submit-btn:hover{
