--- a/WebContent/css/admin/promotion/event/detail.css
+++ b/WebContent/css/admin/promotion/event/detail.css
@@ -4,7 +4,7 @@
 	
 	.sub-container .img-sec .img-container {
 		width: 800px;
-		margin: 0 auto;
+		margin: 50px auto 0 auto;
 	}
 	
 		.sub-container .img-sec .img-container > img {
